# oxmol

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  setup.py
deployment/: build_linux.sh  build_windows.sh
deployment/conda_envs/: python36.yml  python37.yml  python38.yml  run_conda_installer.bat  setup_conda_linux.sh  setup_conda_macos.sh  setup_conda_windows.sh
deployment/install_rust/: install_rust_linux.sh  install_rust_macos.sh  install_rust_windows.sh
doc/: Makefile  conf.py  fake_oxmol.py  gen_api_stubs.sh  index.rst  installation.rst
doc/source/: oxmol.bond_order.rst  oxmol.element.rst  oxmol.molecule.rst  oxmol.parity.rst  oxmol.rst  oxmol.spec.rst
oxmol/: __init__.py  bond_order.py  element.py  molecule.py  parity.py  spec.py
oxmol/test/: test_atom_spec.py  test_bond_spec.py  test_element.py  test_molecule.py
src/: bond_order.rs  default_molecule.rs  element.rs  exceptions.rs  lib.rs  parity.rs  spec.rs
