[package]
name = "oxmol"
version = "0.1.0"
authors = ["Travis Hesketh <travis@hesketh.scot>"]
edition = "2018"

[lib]
name = "oxmol"
crate-type = ["cdylib"]

[dependencies]
chemcore = {git = "https://github.com/rapodaca/chemcore"}
gamma = "0.1.1"

    [dependencies.pyo3]
    version = "0.10.1"
    features = ["extension-module"]
